# airflow-provider-avito

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  README_RU.md  pyproject.toml
.github/workflows/: publish.yml
airflow_provider_avito/: __init__.py
airflow_provider_avito/hooks/: avito.py
airflow_provider_avito/operators/: calls.py
docs/plans/: 20260625-architecture-deepening.md
docs/plans/completed/: 20260610-avito-provider.md  20260617-snapshot-ts-versioning.md  20260625-architecture-deepening.md  20260625-snapshot-ts-dag-run-start-date.md
examples/: bq_and_s3_multi_account_dag.py
tests/: test_example_dag_multi_account.py  test_hook.py  test_operator.py  test_provider_info.py
